Implement /flavor resource
